# confetti

./: .gitignore  LICENSE  README.md  meson.build
include/confetti/: confetti.hpp  confettix.hpp
test/: CMakeLists.txt  confetti.sln  confetti.vcxproj  confetti.vcxproj.filters  meson.build  test.cpp
tests/: tests.cpp
